# Rubiks-Cube-Solver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Models/: GenericRubiksCube.cpp  GenericRubiksCube.h  Rubiks_1D_Model.cpp  Rubiks_3D_Model.cpp  Rubiks_3D_Model.h  Rubiks_3d_model.cpp  Rubiks_BitBoard_Model.cpp
Pattern_Database/: Corner_DB_Maker.cpp  Corner_DB_Maker.h  Corner_Pattern_Database.cpp  Corner_Pattern_Database.h  Nibble_Array.cpp  Nibble_Array.h  Pattern_Database.cpp  Pattern_Database.h  PermutationIndexer.h  math.cpp  math.h
Solvers/: BFS_Solver.h  DFS_Solver.h  IDAstar_Solver.cpp  IDAstar_Solver.h  IDDFS_Solver.cpp  IDDFS_Solver.h
